# GradleJniSample

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
.github/workflows/: master.yml
GradleJniSample/: build.gradle
GradleJniSample/src/test/java/: HelloTest.java
app/: build.gradle
app/src/androidTest/java/com/example/myapplication/: ExampleInstrumentedTest.java
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/test/java/com/example/myapplication/: ExampleUnitTest.java
hello/: build.gradle
hello_ndk/: CMakeLists.txt  build.gradle
hello_ndk/src/main/: AndroidManifest.xml
hello_pure_library/src/main/java/j/: HelloWorld.java
hello_pure_library/src/main/jni/: hello.c
src/main/java/: HelloWorld.java  PlatformUtils.java
